Middle of DEV - redesign core models for concurrency